fix center alignment in about page

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -688,13 +688,14 @@ footer a:hover {
   display: flex;
   flex-direction: column;
   width: 75%;
+  text-align: right;
 }
 .about-middle .about-middle-text p {
   color: white;
   width: 100%;
   padding: 2%;
   padding-top: 1%;
-  padding-left: 50%;
+  padding-left: 30%;
   padding-right: 9%;
   font-size: 2.6rem;
 }
